SERVER-17205 do not proceed with bulk update on the primary when it is stepped down

(cherry picked from commit 8cf51d1d88c8301253ba42c44db0f2fcb0e9a62e)