src/mongo/db/commands/write_commands/batch_executor.cpp
@@ -1221,6 +1221,11 @@ namespace mongo {
                 ScopedTransaction transaction(txn, MODE_IX);
                 Lock::DBLock lk(txn->lockState(), nsString.db(), MODE_X);
                 Client::Context ctx(txn, nsString.ns(), false /* don't check version */);
+
+                if (!checkIsMasterForDatabase(nsString, result)) {
+                    return;
+                }
+
                 Database* db = ctx.db();
                 if ( db->getCollection( nsString.ns() ) ) {
                     // someone else beat us to it
@@ -1241,6 +1246,10 @@ namespace mongo {
                                          nsString.ns(),
                                          MODE_IX);
             ///////////////////////////////////////////
+
+            if (!checkIsMasterForDatabase(nsString, result)) {
+                return;
+            }
 
             if (!checkShardVersion(txn, &shardingState, *updateItem.getRequest(), result))
                 return;
@@ -1378,6 +1387,10 @@ namespace mongo {
 
                 Lock::CollectionLock collLock(txn->lockState(), nss.ns(), MODE_IX);
 
+                // getExecutorDelete() also checks if writes are allowed.
+                if (!checkIsMasterForDatabase(nss, result)) {
+                    return;
+                }
                 // Check version once we're locked
 
                 if (!checkShardVersion(txn, &shardingState, *removeItem.getRequest(), result)) {
